# CalcMahjongPoints

./: CHANGELOG.md  CalcMahjongGamePoints.cabal  CalcMahjongPoints.cabal  LICENSE  README.md  stack.yaml
src/: Main.hs
