cabal-version:       2.2

name:                CalcMahjongGamePoints
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/bikikiMK2/CalcMahjongGamePoints#readme
license:             MIT
license-file:        LICENSE
author:              Hibiki Kawashima
maintainer:          netkh918@gmail.com
copyright:           2025 Hibiki Kawashima
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

executable CalcMahjongGamePoints
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
